--- a/gb/ncid282_5.md
+++ b/gb/ncid282_5.md
@@ -17,7 +17,7 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11648932.md#1" target="_blank">“双11”背后 快递包装垃圾成环境之灾</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11648932.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG111258650463-150x120.jpg" align ="left"></a>国际环保组织在大陆“双11”购物节发布了快递包装废弃物报告说，快递纸箱类包装废弃物重复使用率不到5%，包装垃圾将造成灾难性的后果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 5:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11648878.md#1" target="_blank">滴滴司机刀捅乘客 扬言“我舅是公安局长”</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11648878.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/didi-150x120.jpg" align ="left"></a>大陆网约车“滴滴顺风车”再曝丑闻，刘姓司机用刀捅伤乘客后，还扬言“我舅舅是公安局长”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 4:05 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11647388.md#1" target="_blank">长沙9岁童遭陌生男打死 百人围观</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11647388.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/IMG_9162-150x120.jpg" align ="left"></a>日前，湖南长沙市雅塘村汇城上筑小区发生的9岁男童罗棋被打死事件有新进展，大陆媒体还原了事发时的细节情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月11日 11:54 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/10/n11646016.md#1" target="_blank">【名家专栏】老兵节上一段触动心弦的回忆</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/10/n11646016.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/veterans-new-york-1200x800-150x120.jpg" align ="left"></a>11月11日是美国退伍军人节或退伍军人纪念日（Veterans Day），也是美国联邦假日，俗称老兵节。这是美国一个重要的全国性节日，全美各地的人们会在该日举行游行等庆祝活动，借此向退伍军人、特别是参加过历次战争的退伍军人表达敬意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月11日 10:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/16/n11659882.md#1" target="_blank">重庆饲养员私自带幼女近距离摸熊猫受处理</a><br></h3>日前，重庆市动物园一名饲养人员未经许可，私自私自带人进入工作区域近距离观看大熊猫幼仔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 4:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/16/n11659775.md#1" target="_blank">川男7000元做结扎手术 4个月后妻怀孕</a><br></h3>四川崇州市一男子在蜀都医院花费7000多元做男性结扎手术，结果其妻子4个月后怀孕，做手术的医院被投诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 2:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/15/n11657048.md#1" target="_blank">每日三退声明精选（2019/11/14）</a><br></h3>在全球关注香港人民捍卫民主自由运动的时刻，我们越来越看清了中共的邪恶。回想到八九六四及镇压法轮功，中共使用的一切镇压手段如出一辙。一个政府，一个政权靠谎言、欺骗等流氓手段镇压正义与良知，这在历史上是绝无仅有的...... 。我们不与邪恶为伍，退出年少时期加入的少先队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 10:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/14/n11654455.md#1" target="_blank">每日三退声明精选（2019/11/13）</a><br></h3>被中共长期欺骗、高压管控的国民，从未真正地拥有过面包和自由。吃一口饭却要交半口税，透支几代人的积蓄才买得起的房产，70年后却很可能成为中共“国有”。好不容易成了富豪，也得向中共俯首称臣，接受其管控。德利看透了邪党的流氓邪教本质，在此宣誓退出邪党的共青团和少先队组织不给邪党陪葬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 10:59 AM							</td></tr>
