--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -25,7 +25,7 @@
 本文刊载于旧金山11月23日教育版
 每周为您献上旧金山最新消息
 责任编辑：李欧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 6:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/28/n11687667.md#1" target="_blank">诗歌：友聚</a><br></h3> 挚友聚一门，品茶论古今。 畅抒胸中意，俱是蓬来人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:19 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/16/9/30/n8353538.md#1" target="_blank">古代渔家生活的纪录片──《江行初雪图》</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/16/9/30/n8353538.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/4f17e9d37174b02d6e8a908e55e28f7e-150x120.jpg" align ="left"></a>江面布满粼粼波纹，细看发现他是用毛笔以中锋一上一下、很富韵律感地把水波描绘出来，似乎这样才足以反映风势紧冽的吹拂，也营造出江面森森辽阔、大自然威严得令人摒息的一面。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 5:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/27/n11685305.md#1" target="_blank">作文选登：当我独处时</a><br></h3>独处的时光，不一定是空虚的。在独处时，也是一种放松，可以从事自己的乐趣。在这一分一秒的时间里，体会时间的可贵，也使我能在人生中，拥有片刻乐趣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 1:29 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/27/n11685298.md#1" target="_blank">童谣：牵牛花</a><br></h3>牵牛花，藤儿长，
 爬上篱笆爬上房。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 1:22 AM			</td></tr>
