--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -39,7 +39,7 @@
 2.桂民海瑞典获奖 中共驻瑞大使威胁制裁遭批
 中共驻瑞典大使桂从友周三（4日）在哥德.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 9:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/30/n11621371.md#1" target="_blank">【内幕】为何歼-10酷似F-16猎鹰战机</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/30/n11621371.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-453406375-150x120.jpg" align ="left"></a>中共歼10（J-10）战机又被称为猛龙，是中共单引擎喷气式战斗机机队的主要战机，与西方和俄罗斯第四代战斗机相当。但J-10与无所不在的美国F-16猎鹰战斗机（F-16 Fighting Falcon）十分相似。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 9:15 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706387.md#1" target="_blank">【直播回放】12.8国际人权日 80万人大游行</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912080559132478-600x399-1-150x120.jpg" align ="left"></a>香港民阵周日（12月8日）发起“国际人权日”集会大游行，呼吁全民上街，继续向港府施压，“五大诉求 缺一不可”。游行已获警方不反对通知书。新唐人电视台和《大纪元时报》将进行全程追踪和网络直播。请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 8:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11709969.md#1" target="_blank">女子谎称误吞奶茶吸管 医生取出30厘米催吐管</a><br></h3>日前，22岁的广州女子小卢前往医院就诊，说自己喝奶茶时不小心将吸管吞入食道。医生检查发现，所谓的“吸管”竟宽约19厘米、长约30厘米。小卢才说，她吞进去的是网购的催吐管。医生告诫，盲目插管对内脏的伤害非常大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11709669.md#1" target="_blank">被曝性侵的上海财大副教授 辞三公司董事</a><br></h3>被曝性侵女硕士生的上海财经大学副教授钱逢胜，两天内辞去三间上市公司独立董事的职务，原因均为“因个人原因”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 12:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11709631.md#1" target="_blank">每日三退声明精选（2019/12/08）</a><br></h3>我是一名员警家属，知道我们那里有炼法轮功的被残酷迫害，今听到真相，我决定退出中共邪党的少先队组织，并且要给丈夫讲清真相，不让他参与迫害好人，选择美好未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11709028.md#1" target="_blank">了解法轮功真相 民众喝止男子行恶</a><br></h3>10月23日，大陆一城市的两位女性法轮功学员给人们发真相资料时，被一男子拍照、抢包。附近的几位路人冲过来喝止该男子的行为，帮了她们。恰巧其中的一位路人曾从一位学员那听过法轮功真相后得福报了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 4:06 AM							</td></tr>
