--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -18,6 +18,7 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/29/n11690882.md#1" target="_blank">【美股瞭望】贸易谈判半个月内或传好消息</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/29/n11690882.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190925151725100699-600x400-1-150x120.jpg" align ="left"></a>在川普总统周三（27日）签署《香港人权与民主法案》之后，亚洲股市连续两日出现较大的获利了结卖压，美股周四休市，周五道指和标普指数皆下挫0.4%，那斯达克下跌0.46%，结束了连升四天的涨势，部分投资人担心中共外交部的抗议声明或影响美中贸易第一阶段协议的签订。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 9:19 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/30/n11690899.md#1" target="_blank">【名家专栏】感恩节的沉思：对富足的思考</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/30/n11690899.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/thanksgiving-parade-1200x884-150x120.jpg" align ="left"></a>感恩节是典型的美国节日，融合了世俗和神圣——融合了希腊—罗马和犹太—基督教的世界观，塑造了我们国家的特性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 9:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/29/n11688080.md#1" target="_blank">香港，你会好起来吗？</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/29/n11688080.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/520231ac92e9008b0d77409b6cbdb325-150x120.jpg" align ="left"></a>那年你带我上太平山顶，我的眼里是维多利亚港的醉人景观，你的眼里是对九七后的茫然与期盼。隔年你来台北，我带你上阳明山，双城都有美丽的山，亲吻我们的风，后来却很不一样。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 6:51 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/1/n11693751.md#1" target="_blank">朱同：多行不义必自毙</a><br></h3>最近党媒都很火大、鬼火都绿了，忙到脚不沾地，批判“香港人权与民主法案”，批判“美帝霸权主义”。好多都是陈词滥调，没有新意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:13 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/22/n11674929.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（6）</a><br></h3>在了解学习任何一个学科、领域时，首先需要知道的是相关的概念。概念被认为是心智的表征，对象或客体的抽象，是构成人类思维的基本单元，在认知的所有方面都扮演着重要角色。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:20 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/1/n11693309.md#1" target="_blank">杜彼得： 举贤而授能 大贤处上 不肖处下</a><br></h3>吴阿姨辞世?美东华人的缩影
 
@@ -56,6 +57,5 @@
 向普世宣战......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:18 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/30/n11690886.md#1" target="_blank">袁斌：香港媒体公信力排名，为何大公报排末座</a><br></h3>刚刚结束的香港区议会选举，泛民大胜，建制派惨败，再次证明主流民意是站在反送中这边的。可香港党媒《文汇报》、《大公报》等却将这一“挫折”归结于反对派“暴力操控选举”，还把它跟所谓的“以美国为首的西方”挂起钩来，说什么“从国际环境来看，以美国为首的西方连手干预香港选举更是前所未有。”这种歪曲事实的宣传自然遭到了所有了解实情.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/29/n11690670.md#1" target="_blank">胡少江：香港社会的痈疽 是极权政府的宝贝</a><br></h3>香港区议会选举结束之后，备受中国政府推崇的香港“光头警长”刘泽基再次自愿地站在了风口浪尖。支持北京的建制派在此次选举中彻底溃败，在得知选举结果之后，刘泽基立即在大陆政府严密控制的微博发文，对防火墙内的大陆网民抱怨道，“选举结果证明百分之六十的香港市民是支持暴民的”，建议中央政府“停止对香港人的帮助，就让他们看看没有祖国.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:03 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/29/n11690605.md#1" target="_blank">廖祖笙：法治的虚无是乱港之源</a><br></h3>习近平先生，因“反送中”扬起的风波，在香港已经持续了很长时间，曾经亮丽的“东方之珠”，在愈演愈烈的官民对立中，一片黯淡，一地鸡毛，已被血与火洗礼久矣，估计在相当长的一段时间内，都难于复原。居心叵测的“维稳”势力，在人为制造道路以目，在禁绝人们谈论“反送中”，这只会让香港的动荡，持续得更是旷日持久。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 4:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/iqwytd266/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/iqwytd266/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_5.htm">http://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
